--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.23",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "15.1.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^15.5.9",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
