--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-email/components": "^1.0.4",
     "@tailwindcss/postcss": "^4.1.18",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
@@ -18,6 +19,8 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^5.2.1",
+    "resend": "^6.7.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
