--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^5.2.1",
+    "react-icons": "^5.5.0",
     "resend": "^6.7.0",
     "tailwind-merge": "^2.6.0"
   },
