--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
-    "@react-email/components": "^1.0.4",
+    "@react-email/components": "^1.0.5",
+    "@react-email/render": "^2.0.3",
     "@tailwindcss/postcss": "^4.1.18",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
@@ -21,7 +22,7 @@
     "react-dom": "^19.0.0",
     "react-email": "^5.2.1",
     "react-icons": "^5.5.0",
-    "resend": "^6.7.0",
+    "resend": "^6.8.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
